--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,44 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1]\n",
+      "[1, 2, 2]\n",
+      "[1, 2, 3]\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
-    "def solution(N, number):\n",
-    "    if number == 1:\n",
-    "        return 1\n",
-    "    set_list = []\n",
-    "    \n",
-    "    for cnt in range(1, 9): # 1개부터 8개까지 확인\n",
-    "        partial_set = set()\n",
-    "        partial_set.add(int(str(N) * cnt)) # 이어 붙여서 만드는 경우 넣기\n",
-    "        for i in range(cnt - 1): # (1, n-1) 부터 (n-1, 1)까지 사칙연산\n",
-    "            for op1 in set_list[i]:\n",
-    "                for op2 in set_list[-i - 1]:\n",
-    "                    partial_set.add(op1 + op2)\n",
-    "                    partial_set.add(op1 * op2)\n",
-    "                    partial_set.add(op1 - op2)\n",
-    "                    if op2 != 0:\n",
-    "                        partial_set.add(op1 // op2)\n",
-    "        # 만든 집합에 number가 처음 나오는지 확인\n",
-    "        if number in partial_set:\n",
-    "            return cnt\n",
-    "        set_list.append(partial_set)\n",
-    "    return -1\n",
+    "import sys\n",
+    "sys.stdin = open(\"input.txt\", \"rt\")\n",
+    "input = sys.stdin.readline\n",
     "\n",
-    "solution(5, 12)"
+    "# 정사각형 4개 = 테트로미노\n",
+    "# 하나를 놓아서 칸에 놓여있는 수들의 합을 최대로\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('a', 4), ('b', 3)])\n",
+      "[('b', 3), ('a', 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open(\"input.txt\", \"rt\")\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "# 파이프는 2개의 연속된 칸을 차지하는 크기\n",
+    "# 항상 빈 칸만 차지\n",
+    "# ->, 아래 우, 아래 방향\n",
+    "\n",
+    "# 파이프를 1,1에서 N, N로 이동시키는 방법의 개수\n",
+    "\n",
+    "n = int(input())\n",
+    "graph = [[0] * (n + 1)] + [list(map(int, input().split())) for _ in range(n)]\n",
+    "for i in range(1, n+1):\n",
+    "    graph[i].insert(0, 0)\n",
+    "\n",
+    "# [i][j][0] = 세로, [1] = 대각, [2] = 가로\n",
+    "dp = [[[0] * 3 for _ in range(n+1)] for _ in range(n+1)]\n",
+    "# 1, 1 위치에서 1,2로 주어지므로, 1,2를 1로 표시\n",
+    "dp[1][2][2] = 1\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    for j in range(1, n+1):\n",
+    "        # 세로에서 오는 경우\n",
+    "        dp[i][j][0] += dp[i-1][j][0] + dp[i-1][j][1]\n",
+    "        # 대각에서 오는 경우\n",
+    "        dp[i][j][1] += dp[i-1][j-1][0] + dp[i-1][j-1][1] + dp[i-1][j-1][2]\n",
+    "        # 가로에서 오는 경우\n",
+    "        dp[i][j][2] += dp[i][j-1][1] + dp[i][j-1][2]\n",
+    "\n",
+    "print(*dp, sep='\\n')"
    ]
   },
   {
