--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 0, 0]\n",
+      "0\n"
      ]
     }
    ],
@@ -18,50 +22,95 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# 정사각형 4개 = 테트로미노\n",
-    "# 하나를 놓아서 칸에 놓여있는 수들의 합을 최대로\n",
+    "# 약이 N개 담긴 병\n",
+    "# 한조각\n",
     "\n",
-    "n, m = map(int, input().split())\n",
-    "graph = [list(map(int, input().split())) for _ in range(n)]\n",
+    "# k가지 동전이 각각 nk개 씩 \n",
+    "# T원의 지폐를 동전으로\n",
     "\n",
-    "# 1. 3이면 answer와 total을 비교\n",
-    "# 2. \n",
-    "dx = [-1, 0, 1, 0]\n",
-    "dy = [0, 1, 0, -1]\n",
-    "def dfs(x, y, index, total):\n",
+    "# 1. set으로 숫자들을 모두 더해줄 것\n",
+    "# 2. list에 append\n",
+    "# 3. 아까 그 숫자들을 list에 넣어주기\n",
     "\n",
-    "    if index == 3:\n",
-    "        global answer\n",
-    "        answer = max(total, answer)\n",
-    "        return\n",
-    "    \n",
-    "    for i in range(4):\n",
-    "        nx = x + dx[i]\n",
-    "        ny = y + dy[i]\n",
-    "        if 0 <= nx < n and 0 <= ny < m and not visit[nx][ny]:\n",
-    "            # index가 1이라면, dfs(x, y, index + 1, total + graph[nx][ny])\n",
-    "            if index == 1:\n",
-    "                visit[nx][ny] = 1\n",
-    "                dfs(x, y, index + 1, total + graph[nx][ny])\n",
-    "                visit[nx][ny] = 0\n",
-    "            \n",
-    "            visit[nx][ny] = 1\n",
-    "            dfs(nx, ny, index + 1, total + graph[nx][ny])\n",
-    "            visit[nx][ny] = 0\n",
+    "# [5, 10, 15] ,[10, 20], [1, 2, 3, 4, 5]\n",
+    "n = int(input())\n",
+    "k = int(input())\n",
     "\n",
+    "dp = [[0] * (n+1) for _ in range(k + 1)]\n",
     "\n",
-    "global visit\n",
-    "visit = [[False] * m for _ in range(n)]\n",
-    "global answer\n",
-    "answer = 0\n",
+    "dp[0][0] = 1\n",
     "\n",
-    "for i in range(n):\n",
-    "    for j in range(m):\n",
-    "        visit[i][j] = 1\n",
-    "        dfs(i, j, 0, graph[i][j])\n",
-    "        visit[i][j] = 0\n",
+    "for i in range(1, k+1):\n",
+    "    value, num = map(int, input().split())\n",
     "\n",
-    "print(answer)"
+    "    for j in range(n+1):\n",
+    "        dp[i][j] = dp[i-1][j]\n",
+    "        for k in range(1, num+1):\n",
+    "            if 0 <= j - (value * k) <= n:\n",
+    "                dp[i][j] += dp[i-1][j - value * k]\n",
+    "\n",
+    "# print(*dp, sep='\\n')\n",
+    "print(dp[-1][-1])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\황인권\\OneDrive - 동국대학교\\문서\\CodingTest_Python\\codingTest2\\test.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m a\u001b[39m.\u001b[39madd(\u001b[39m3\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(a)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(a[\u001b[39m1\u001b[39;49m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "a = set()\n",
+    "a.add(0)\n",
+    "a.add(1)\n",
+    "a.add(2)\n",
+    "a.add(3)\n",
+    "\n",
+    "print(a)\n",
+    "print(a[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\황인권\\OneDrive - 동국대학교\\문서\\CodingTest_Python\\codingTest2\\test.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m student \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m student\u001b[39m.\u001b[39;49mremove(\u001b[39m5\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(student)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "student = [0, 1, 2, 3, 4, 7]\n",
+    "student.remove(5)\n",
+    "print(student)"
    ]
   },
   {
