--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "['1', '1']\n"
      ]
     }
    ],
@@ -18,111 +18,23 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# 어른 상어가 마법사\n",
-    "# 크기가 N x N인 격자에 파이어볼 M개를 발사\n",
-    "# 처음에 파이어볼은 각자 위치에서 이동을 대기\n",
-    "# i번 파이어볼의 위치는 r, c 질량은 m\n",
-    "# 방향은 d, 속력은 s\n",
-    "# 위치 r,c는 r행 s열\n",
+    "def mod(n, base):\n",
+    "    arr = \"0123456789\"\n",
+    "    q, r = divmod(n, base)\n",
     "\n",
-    "# 1번 행은 N번, 1번 열은 N번\n",
-    "# 방향은 인접한 8개의 칸의 방향\n",
+    "    if q == 0:\n",
+    "        return arr[r]\n",
     "\n",
-    "# 파이어볼이 자신의 방향 di로 속력 si칸 만큼 이동한다\n",
-    "# 여러개가 있을 수 있음\n",
+    "    return mod(n // base, base) + arr[r]\n",
     "\n",
-    "# 이동이 모두 끝난 뒤, 2개 이상의 파이어볼이 있는 경우\n",
-    "# 1. 하나로 합쳐짐\n",
-    "# 2. 4개의 파이어볼로 나누어짐\n",
+    "# \n",
     "\n",
-    "# 나누어진 경우 질량, 속력, 방향\n",
-    "# 질량은 합쳐진 질량 / 5\n",
-    "# 속력은 속력의 합 / 합쳐진 개수\n",
-    "# 합쳐지는 방향이 홀수이거나 짝수이면, 방향은 0, 2, 4, 6 그렇지 않으면 1, 3, 5, 7\n",
-    "# 질량이 0인 파이어볼은 소멸\n",
-    "\n",
-    "# K번 명령한 후, 남아있는 파이어볼 질량의 합\n",
-    "\n",
-    "n, m, k = map(int, input().split())\n",
-    "fireball = []\n",
-    "for _ in range(m):\n",
-    "    _r, _c, _m, _s, _d = list(map(int, input().split()))\n",
-    "    fireball.append([_r-1, _c-1, _m, _s, _d])\n",
-    "\n",
-    "# 걱 리스트마다 []로 선언\n",
-    "# 이동\n",
-    "# 파이어볼 2개인 곳 확인 후, 작업\n",
-    "\n",
-    "dx = [-1, -1, 0, 1, 1, 1, 0, -1]\n",
-    "dy = [0, 1, 1, 1, 0, -1, -1, -1]\n",
-    "\n",
-    "def setup():\n",
-    "    for x in fireball:\n",
-    "        r, c, m, s, d = x\n",
-    "        graph[r-1][c-1].append([m, s, d])\n",
-    "\n",
-    "def move():\n",
-    "     while fireball:\n",
-    "        r, c, m, s, d = fireball.pop(0)\n",
-    "        nx = (r + dx[d] * s ) % n\n",
-    "        ny = (c + dy[d] * s ) % n\n",
-    "        graph[nx][ny].append([m, s, d])\n",
-    "\n",
-    "def check():\n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            tot_m = 0\n",
-    "            tot_s = 0\n",
-    "            count = len(graph[i][j])\n",
-    "\n",
-    "            cnt_even = 0\n",
-    "            cnt_odd = 0\n",
-    "\n",
-    "            if len(graph[i][j]) > 1:\n",
-    "                for k in range(len(graph[i][j])):\n",
-    "                    m, s, d = graph[i][j].pop()\n",
-    "                    tot_m += m\n",
-    "                    tot_s += s\n",
-    "                # count가 짝수라면,\n",
-    "                    if d % 2 == 0:\n",
-    "                        cnt_even += 1\n",
-    "                    else:\n",
-    "                        cnt_odd += 1\n",
-    "                \n",
-    "                if cnt_even == count or cnt_odd == count:\n",
-    "                    nd = [0, 2, 4, 6]\n",
-    "                else:\n",
-    "                    nd = [1, 3, 5, 7]\n",
-    "\n",
-    "                # 질량이 0인 파이어볼인 경우 무시\n",
-    "                \n",
-    "                # 질량이 남아있는 경우, fireball에 등록\n",
-    "                if tot_m // 5:\n",
-    "                    for x in nd:\n",
-    "                        fireball.append([i, j, tot_m // 5, tot_s // count, x])\n",
-    "\n",
-    "            # graph에 하나가 존재하는 경우\n",
-    "            elif graph[i][j]:\n",
-    "                m, s, d = graph[i][j].pop()\n",
-    "                fireball.append([i, j, m, s, d])\n",
-    "\n",
-    "\n",
-    "def calc():\n",
-    "    result = 0\n",
-    "    for i in range(len(fireball)):\n",
-    "        i, j, m, s, d = fireball[i]\n",
-    "        result += m\n",
-    "    \n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "graph = [[[] for _ in range(n)] for _ in range(n)]\n",
-    "\n",
-    "for _ in range(k):\n",
-    "    # move\n",
-    "    move()\n",
-    "    check()\n",
-    "print(calc())"
+    "n = 2\n",
+    "bin_number = list(mod(n, 2))\n",
+    "idx = ''.join(bin_number).rfind('0')\n",
+    "bin_number[idx] = '1'\n",
+    "int(''.join(bin_number), 2)\n",
+    "\n"
    ]
   },
   {
