--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -6,10 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '1']\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\황인권\\OneDrive - 동국대학교\\문서\\CodingTest_Python\\codingTest2\\test.ipynb 셀 1\u001b[0m in \u001b[0;36m<cell line: 117>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W0sZmlsZQ%3D%3D?line=113'>114</a>\u001b[0m     air_down(airclearner)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W0sZmlsZQ%3D%3D?line=115'>116</a>\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W0sZmlsZQ%3D%3D?line=116'>117</a>\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39msum\u001b[39;49m(graph)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/codingTest2/test.ipynb#W0sZmlsZQ%3D%3D?line=118'>119</a>\u001b[0m \u001b[39mprint\u001b[39m(answer \u001b[39m+\u001b[39m \u001b[39m2\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
      ]
     }
    ],
@@ -18,125 +22,25 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "def mod(n, base):\n",
-    "    arr = \"0123456789\"\n",
-    "    q, r = divmod(n, base)\n",
+    "# n x m 크기의 직사각형\n",
+    "# k개의 cctv\n",
+    "# cctv는 총 5가지 종류\n",
     "\n",
-    "    if q == 0:\n",
-    "        return arr[r]\n",
+    "# 1번 cctv는 한쪽 방향만 감시\n",
+    "# 2번은 반대\n",
+    "# 3번은 직각\n",
+    "# 4번은 \n",
     "\n",
-    "    return mod(n // base, base) + arr[r]\n",
+    "# cctv의 방향을 적절히 정해서, 사각 지대의 최소 크기를 구하기\n",
     "\n",
-    "# \n",
-    "\n",
-    "n = 2\n",
-    "bin_number = list(mod(n, 2))\n",
-    "idx = ''.join(bin_number).rfind('0')\n",
-    "bin_number[idx] = '1'\n",
-    "int(''.join(bin_number), 2)\n",
+    "n, m = \n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 175,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.stdin = open(\"input.txt\", \"rt\")\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "N, M, K = map(int, input().split())\n",
-    "fireballs = []\n",
-    "for _ in range(M):\n",
-    "    _r, _c, _m, _s, _d = list(map(int, input().split()))\n",
-    "    fireballs.append([_r-1, _c-1, _m, _s, _d])\n",
-    "\n",
-    "MAP = [[[] for _ in range(N)] for _ in range(N)]\n",
-    "\n",
-    "dx = [-1, -1, 0, 1, 1, 1, 0, -1]\n",
-    "dy = [0, 1, 1, 1, 0, -1, -1, -1]\n",
-    "\n",
-    "for _ in range(K):\n",
-    "    # 파이어볼 이동\n",
-    "    while fireballs:\n",
-    "        cr, cc, cm, cs, cd = fireballs.pop(0)\n",
-    "        nr = (cr + cs * dx[cd]) % N  # 1번-N번 행 연결되어있기 때문\n",
-    "        nc = (cc + cs * dy[cd]) % N\n",
-    "        MAP[nr][nc].append([cm, cs, cd])\n",
-    "\n",
-    "    # 2개 이상인지 체크\n",
-    "    for r in range(N):\n",
-    "        for c in range(N):\n",
-    "            # 2개 이상인 경우 -> 4개의 파이어볼로 쪼개기\n",
-    "            if len(MAP[r][c]) > 1:\n",
-    "                sum_m, sum_s, cnt_odd, cnt_even, cnt = 0, 0, 0, 0, len(MAP[r][c])\n",
-    "                while MAP[r][c]:\n",
-    "                    _m, _s, _d = MAP[r][c].pop(0)\n",
-    "                    sum_m += _m\n",
-    "                    sum_s += _s\n",
-    "                    if _d % 2:\n",
-    "                        cnt_odd += 1\n",
-    "                    else:\n",
-    "                        cnt_even += 1\n",
-    "                if cnt_odd == cnt or cnt_even == cnt:  # 모두 홀수이거나 모두 짝수인 경우\n",
-    "                    nd = [0, 2, 4, 6]\n",
-    "                else:\n",
-    "                    nd = [1, 3, 5, 7]\n",
-    "                if sum_m//5:  # 질량 0이면 소멸\n",
-    "                    for d in nd:\n",
-    "                        fireballs.append([r, c, sum_m//5, sum_s//cnt, d])\n",
-    "\n",
-    "            # 1개인 경우\n",
-    "            if len(MAP[r][c]) == 1:\n",
-    "                fireballs.append([r, c] + MAP[r][c].pop())\n",
-    "\n",
-    "print(sum([f[2] for f in fireballs]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = -1 % 4\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"12:20\" < \"23:20\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
