--- a/codingTest2/backjoon/24. 21610 마법사 상어와 비바라기.ipynb
+++ b/codingTest2/backjoon/24. 21610 마법사 상어와 비바라기.ipynb
@@ -2,19 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
+    "import copy\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "#! 미완\n",
@@ -81,37 +74,13 @@
     "\n",
     "print(answer)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "name": "python"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "2ba6819d172d60e93b2f90e5d47af36d4f36070393882cfcbe0fef625705f185"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
