--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,78 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] [] [] [] [] [] [] []\n"
+      "팰린드롬\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# 모든 건물을 짓는데 걸리는 최소의 시간을 이용하여 근사\n",
-    "\n",
-    "# 건물의 종류 수 N, N개의 줄에는 각 건물을 짓는데 걸리는 시간, 그 건물을 짓기 위해 먼저 지어져야 하는 건물들의 번호\n",
-    "# 건물의 번호는 1 ~ N, 각 줄은 -1로 끝난다\n",
-    "# 각 건물을 짓는데 걸리는 시간은 \n",
-    "\n",
-    "# N개의 건물이 완성되기까지 걸리는 최소 시간\n",
-    "N = int(input())\n",
-    "\n",
-    "# 노드와 간선의 정보 저장한다고 생각하면 됨\n",
-    "building = [[] for _ in range(N + 1)]\n",
-    "# 각 노드의 진입차수 저장\n",
-    "indegree = [0] * (N + 1)\n",
-    "# 건물 짓는데 걸리는 시간\n",
-    "cost = [0] * (N + 1)\n",
-    "\n",
-    "for i in range(1, N + 1):\n",
-    "    data = list(map(int, input().split()))[:-1]\n",
-    "    cost[i] = data[0]\n",
-    "    building_data = data[1:]\n",
-    "\n",
-    "    # 간선 연결 및 진입차수 설정\n",
-    "    for j in building_data:\n",
-    "        building[j].append(i)\n",
-    "        indegree[i] += 1\n",
+    "# 이동은 육지로만\n",
+    "# 두번이동 불가, 같은 곳을 두 번 이상지나가기 x\n",
+    "# 최단거리로 이동할 때 가장 긴 시간이 걸리는 두 곳\n",
     "\n",
     "\n",
-    "# 위상 정렬 함수\n",
-    "def topology_sort():\n",
-    "    result = [0] * (N + 1)\n",
-    "    q = deque()\n",
     "\n",
-    "    for i in range(1, N + 1):\n",
-    "        if indegree[i] == 0:\n",
-    "            q.append(i)\n",
-    "\n",
-    "    while q:\n",
-    "        now = q.popleft()\n",
-    "        # 큐에서 꺼낸 노드 번호에 해당하는 건물을 짓는데 걸리는 시간 저장\n",
-    "        # 선수 건물 짓는데 걸리는 시간이 포함되어 있음!\n",
-    "        # 즉, '선수 건물 짓는데 걸리는 시간 + 현재 건물 짓는데 걸리는 시간'이 저장됨\n",
-    "        result[now] += cost[now]\n",
-    "        for b in building[now]:\n",
-    "            indegree[b] -= 1\n",
-    "            # b번호 건물을 짓기 전에 먼저 지어야하는 선수 건물 짓는데 걸리는 시간으로 갱신\n",
-    "            result[b] = max(result[b], result[now])\n",
-    "            if indegree[b] == 0:\n",
-    "                q.append(b)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "answer = topology_sort()\n",
-    "for i in range(1, N + 1):\n",
-    "    print(answer[i])"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = set()\n",
+    "a.add(1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(-3))"
    ]
   },
   {
