--- a/codingTest2/backjoon/1. 2293 동전1.ipynb
+++ b/codingTest2/backjoon/1. 2293 동전1.ipynb
@@ -43,7 +43,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
