--- a/codingTest2/backjoon/5. 9252 lcs2.ipynb
+++ b/codingTest2/backjoon/5. 9252 lcs2.ipynb
@@ -2,6 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open(\"input.txt\", \"rt\")\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "word1 = list(input().rstrip())\n",
+    "word2 = list(input().rstrip())\n",
+    "\n",
+    "# 문자로 초기화\n",
+    "dp = [[''] * (len(word1) + 1) for _ in range(len(word2) + 1)]\n",
+    "\n",
+    "# 비교를 했을 때, 문자를 저장하는 식으로\n",
+    "for i in range(1, len(word2) + 1):\n",
+    "    for j in range(1, len(word1) + 1):\n",
+    "        if word2[i-1] == word1[j-1]:\n",
+    "            # 문자가 같다면, i-1, j-1에 있는 문자에 동일한 문자를 추가해서 더해주려고 함\n",
+    "            dp[i][j] = dp[i-1][j-1] + word1[j-1]\n",
+    "        # 다르다면, i-1 or j-1에 있는 dp 중에서 가장 문자열이 긴 것\n",
+    "        else:\n",
+    "            if len(dp[i-1][j]) <= len(dp[i][j-1]):\n",
+    "                dp[i][j] = dp[i][j-1]\n",
+    "            else:\n",
+    "                dp[i][j] = dp[i-1][j]\n",
+    "\n",
+    "print(len(dp[len(word2)][len(word1)]))\n",
+    "print(dp[len(word2)][len(word1)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -17,29 +50,7 @@
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "sys.stdin = open(\"input.txt\", \"rt\")\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "n = int(input())\n",
-    "m = int(input())\n",
-    "\n",
-    "graph = [list(map(int, input())) for _ in range(n)]\n",
-    "dp = [[0] * (m) for _ in range(n)]\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(m):\n",
-    "        # 가장 먼저 자기 자신에 1이 존재한다면 1로 초기화\n",
-    "        if graph[i][j]:\n",
-    "            dp[i][j] = 1\n",
-    "\n",
-    "        # 4방향에 숫자가 존재한다면 [i-1] [j-1] + 1\n",
-    "        if graph[i][j] and graph[i-1][j] and graph[i-1][j-1] and graph[i][j-1]:\n",
-    "            dp[i][j] = dp[i-1][j-1] + 1\n",
-    "\n",
-    "print(*dp)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
