--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "팰린드롬\n"
+      "0\n",
+      "1\n"
      ]
     }
    ],
@@ -17,12 +18,20 @@
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
+    "from collections import defaultdict\n",
+    "from itertools import combinations\n",
     "\n",
-    "# 이동은 육지로만\n",
-    "# 두번이동 불가, 같은 곳을 두 번 이상지나가기 x\n",
-    "# 최단거리로 이동할 때 가장 긴 시간이 걸리는 두 곳\n",
+    "clothes = [[\"yellow_hat\", \"headgear\"],[\"blue_sunglasses\", \"eyewear\"], [\"green_turban\", \"headgear\"]]\n",
     "\n",
+    "dic = defaultdict(list)\n",
+    "for i in range(len(clothes)):\n",
+    "    key = clothes[i][1]\n",
+    "    value = clothes[i][0]\n",
     "\n",
+    "    dic[key].append(value)\n",
+    "\n",
+    "for i in range(len(dic.keys())):\n",
+    "    for j in combinations(dic.)\n",
     "\n",
     "\n"
    ]
