--- a/codingTest2/backjoon/23. 사다리 조작.ipynb
+++ b/codingTest2/backjoon/23. 사다리 조작.ipynb
@@ -89,10 +89,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "2ba6819d172d60e93b2f90e5d47af36d4f36070393882cfcbe0fef625705f185"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
