--- a/codingTest2/프로그래머스/2. 베스트앨범.ipynb
+++ b/codingTest2/프로그래머스/2. 베스트앨범.ipynb
@@ -61,13 +61,56 @@
     "#     print(count_list)\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 2, 3, 4, 5, 6]\n",
+      "[2, 4, 3, 6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "a = [3, 2, 1, 4 ,5 , 6]\n",
+    "heapq.heapify(a)\n",
+    "a[0] += 5\n",
+    "print(a)\n",
+    "heapq.heappop(a)\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "2ba6819d172d60e93b2f90e5d47af36d4f36070393882cfcbe0fef625705f185"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
