--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n"
+      "3 10\n"
      ]
     }
    ],
@@ -18,20 +17,13 @@
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
-    "from collections import defaultdict\n",
-    "from itertools import combinations\n",
     "\n",
-    "clothes = [[\"yellow_hat\", \"headgear\"],[\"blue_sunglasses\", \"eyewear\"], [\"green_turban\", \"headgear\"]]\n",
+    "# n가지 종류의 동전\n",
+    "# 가치의 합이 k원이 되게 하고 싶다\n",
+    "n, k = map(int, input().split())\n",
+    "coin = [int(input()) for _ in range(n)]\n",
     "\n",
-    "dic = defaultdict(list)\n",
-    "for i in range(len(clothes)):\n",
-    "    key = clothes[i][1]\n",
-    "    value = clothes[i][0]\n",
     "\n",
-    "    dic[key].append(value)\n",
-    "\n",
-    "for i in range(len(dic.keys())):\n",
-    "    for j in combinations(dic.)\n",
     "\n",
     "\n"
    ]
