--- a/codingTest2/backjoon/12026 BOJ 거리.ipynb
+++ b/codingTest2/backjoon/12026 BOJ 거리.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
@@ -45,6 +37,10 @@
     "\n",
     "    # 1부터 i+1 ~ n까지를 탐색. BOJ순으로 거리를 최신화\n",
     "    for j in range(i+1, n+1):\n",
+    "        # 해당 조건은 있어도 되고 없어도 됨. 가독성을 위해 추가\n",
+    "        # 1e9라면, 즉 순서가 안맞아서 해당 블록에 접근하지 않았다면 continue\n",
+    "        if block[i] == 1e9:\n",
+    "            continue\n",
     "        # 0 1 2순으로 다음 숫자라면 가장 짧은 거리로 최신화\n",
     "        if (block[i] + 1) % 3 == block[j]:\n",
     "            dp[j] = min(dp[j], dp[i] + (j - i) ** 2)\n",
@@ -52,47 +48,6 @@
     "answer = dp[n] if dp[n] != 1e9 else -1\n",
     "print(answer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = set()\n",
-    "a.add(1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(abs(-3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -102,15 +57,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
   "orig_nbformat": 4,
