--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -1,16 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[3, 1, 2]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -18,54 +26,32 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# N개가 일렬로 놓여진 형태의 도로\n",
-    "# BOJ\n",
-    "# k칸 만큼 점프를 하는데 필요한 에너지 양은 k * k\n",
-    "# BOJ 순서로 점프\n",
-    "# 에너지 양의 최솟값\n",
+    "import math\n",
     "\n",
-    "n = int(input())\n",
-    "block = [0] + list(input())\n",
-    "dp = [1e9] * (n+1)\n",
+    "def solution(n, k):\n",
+    "    answer = []\n",
+    "    numberList = [i for i in range(1, n+1)]\n",
+    "    while (n != 0):\n",
+    "        temp = math.factorial(n) // n # 한개에 몇개씩의 값이 있을지 알 수 잇음.\n",
+    "        # 몇 째 자리수\n",
+    "        index = k // temp\n",
+    "        # 몇 번째 자리\n",
+    "        k = k % temp\n",
     "\n",
-    "# 문자들을 숫자로 치환\n",
-    "for i in range(1, n+1):\n",
-    "    if block[i] == 'B':\n",
-    "        block[i] = 0\n",
+    "        answer.append(numberList.pop(index))\n",
     "\n",
-    "    if block[i] == 'O':\n",
-    "        block[i] = 1\n",
+    "        n -= 1\n",
+    "    \n",
+    "    return answer\n",
     "\n",
-    "    if block[i] == 'J':\n",
-    "        block[i] = 2        \n",
-    "\n",
-    "answer = 0\n",
-    "dp[1] = 0\n",
-    "for i in range(1, n+1):\n",
-    "\n",
-    "    # 1부터 i+1 ~ n까지를 탐색. BOJ순으로 거리를 최신화\n",
-    "    for j in range(i+1, n+1):\n",
-    "        # 0 1 2순으로 다음 숫자라면 가장 짧은 거리로 최신화\n",
-    "        if (block[i] + 1) % 3 == block[j]:\n",
-    "            dp[j] = min(dp[j], dp[i] + (j - i) ** 2)\n",
-    "\n",
-    "answer = dp[n] if dp[n] != 1e9 else -1\n",
-    "print(answer)"
+    "solution(3, 5 - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = set()\n",
     "a.add(1)\n",
